K8s/prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /meteo
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 8080
          - path: /feedbacks
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 8080
          - path: /places
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 8080
          - path: /cities
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 8080
